--- a/views/gallery-1.html
+++ b/views/gallery-1.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/main.js" type="module" defer></script>
 </head>
 <body>
     <aside>
@@ -23,47 +24,8 @@
     </aside>
     <main>
         <h2>Abrigos</h2>
-        <section>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt="">
-            <div>
-              <h3>Abrigo 01</h3>
-              <p>$ 1.000</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_904140-MCO51843801912_102022-F.webp" alt="">
-            <div>
-              <h3>Abrigo 02</h3>
-              <p>$ 2.500</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_930447-MCO71410142210_092023-F.webp" alt="">
-            <div>
-              <h3>Abrigo 03</h3>
-              <p>$ 2.000</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_712593-MCO41606376126_052020-F.webp" alt="">
-            <div>
-              <h3>Abrigo 04</h3>
-              <p>$ 2.500</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_829630-MCO31080337339_062019-F.webp" alt="">
-            <div>
-              <h3>Abrigo 05</h3>
-              <p>$ 1.000</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
+        <section class="catalog">
+          <get-product class="items" prodctype="abrigo"></get-product>
         </section>
       </main>
 </body>
