--- a/views/gallery-2.html
+++ b/views/gallery-2.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/main.js" type="module" defer></script>
 </head>
 <body>
     <aside>
@@ -24,46 +25,8 @@
     <main>
         <h2>Camisetas</h2>
         <section>
-            <article>
-                <img src="https://http2.mlstatic.com/D_NQ_NP_2X_906094-MCO53976036500_022023-F.webp" alt="">
-                <div>
-                  <h3>Camiseta 01</h3>
-                  <p>$ 1.500</p>
-                  <a href="">Agregar</a>
-                </div>
-              </article>
-              <article>
-                <img src="https://http2.mlstatic.com/D_NQ_NP_2X_649847-MCO43854241255_102020-F.webp" alt="">
-                <div>
-                  <h3>Camiseta 02</h3>
-                  <p>$ 2.500</p>
-                  <a href="">Agregar</a>
-                </div>
-              </article>
-              <article>
-                <img src="https://http2.mlstatic.com/D_NQ_NP_2X_995623-MCO70722158553_072023-F.webp" alt="">
-                <div>
-                  <h3>Camiseta 03</h3>
-                  <p>$ 1.000</p>
-                  <a href="">Agregar</a>
-                </div>
-              </article>
-              <article>
-                <img src="https://http2.mlstatic.com/D_NQ_NP_2X_776916-MCO72088562654_102023-F.webp" alt="">
-                <div>
-                  <h3>Camiseta 04</h3>
-                  <p>$ 1.500</p>
-                  <a href="">Agregar</a>
-                </div>
-              </article>
-              <article>
-                <img src="https://http2.mlstatic.com/D_NQ_NP_2X_968038-MCO53410409233_012023-F.webp" alt="">
-                <div>
-                  <h3>Camiseta 05</h3>
-                  <p>$ 2.000</p>
-                  <a href="">Agregar</a>
-                </div>
-              </article>
+          <get-product class="items" prodctype="camiseta"></get-product>
+        </section> 
       </main>
 </body>
 </html>
