--- a/views/gallery-3.html
+++ b/views/gallery-3.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/main.js" type="module" defer></script>
 </head>
 <body>
     <aside>
@@ -24,46 +25,7 @@
     <main>
         <h2>Pantalones</h2>
         <section>
-            <article>
-                <img src="https://http2.mlstatic.com/D_NQ_NP_2X_731406-MCO42646277112_072020-F.webp" alt="">
-                <div>
-                  <h3>Pantalon 01</h3>
-                  <p>$ 2.500</p>
-                  <a href="">Agregar</a>
-                </div>
-              </article>
-              <article>
-                <img src="https://http2.mlstatic.com/D_NQ_NP_2X_795748-MCO70527773883_072023-F.webp" alt="">
-                <div>
-                  <h3>Pantalon 02</h3>
-                  <p>$ 2.000</p>
-                  <a href="">Agregar</a>
-                </div>
-              </article>
-              <article>
-                <img src="https://http2.mlstatic.com/D_NQ_NP_2X_758206-MCO70501309390_072023-F.webp" alt="">
-                <div>
-                  <h3>Pantalon 03</h3>
-                  <p>$ 1.500</p>
-                  <a href="">Agregar</a>
-                </div>
-              </article>
-              <article>
-                <img src="https://http2.mlstatic.com/D_NQ_NP_2X_947436-MCO69626235546_052023-F.webp"" alt="">
-                <div>
-                  <h3>Pantalon 04</h3>
-                  <p>$ 2.000</p>
-                  <a href="">Agregar</a>
-                </div>
-              </article>
-              <article>
-                <img src="https://http2.mlstatic.com/D_NQ_NP_2X_618657-MCO69523195685_052023-F.webp" alt="">
-                <div>
-                  <h3>Pantalon 05</h3>
-                  <p>$ 2.500</p>
-                  <a href="">Agregar</a>
-                </div>
-              </article>
+          <get-product class="items" prodctype="pantalon"></get-product>
         </section>
       </main>
 </body>
