--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ main section article div a{
     width: 100px;
 }
 
-#cart-icon{
+#cart-icon-1, #cart-icon-2, #cart-icon-3{
     padding: 0;
     margin: 0;
     background-color: transparent;
@@ -205,7 +205,7 @@ main section article div a{
     border-radius: 2em;
 }
 
-#cart-icon{
+#cart-icon-1, #cart-icon-2, #cart-icon-3{
     position: absolute;
     object-fit: contain;
     top: 1svh;
@@ -214,7 +214,15 @@ main section article div a{
     max-height: 25px;
 }
 
-#cart-icon > img{
+#cart-icon-1 > img{
+    width: 100%;
+    height: 100%;
+}
+#cart-icon-2 > img{
+    width: 100%;
+    height: 100%;
+}
+#cart-icon-3 > img{
     width: 100%;
     height: 100%;
 }
@@ -397,7 +405,7 @@ main section article div a{
         margin-left: 1vw;
         padding: 0.5svh 0.5vw;
     }
-    #cart-icon{
+    #cart-icon-1, #cart-icon-2, #cart-icon-3{
         top: 1.5svh;
         right: 3vw;
     }
